log
Sat 18 May 2024 05:17:29 PM UTC: 
 sudoku.c | 108 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 106 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:128:11: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  128 |   while (!isEmpty(stack)) {
      |           ^~~~~~~
      |           is_empty
sudoku.c:141:5: error: implicit declaration of function ‘destroyList’ [-Werror=implicit-function-declaration]
  141 |     destroyList(adj);
      |     ^~~~~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:147:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  147 | int main(int argc, char* argv[]) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
bccf314
Sat 18 May 2024 05:22:33 PM UTC: 
 sudoku.c | 109 ++++++++++++++++++++++-----------------------------------------
 1 file changed, 38 insertions(+), 71 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:118:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  118 |     while(!isEmpty(stack)){
      |            ^~~~~~~
      |            is_empty
sudoku.c:129:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  129 |         freeList(adj);
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
a167e66
Sat 18 May 2024 05:24:28 PM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘isEmpty’:
sudoku.c:22:17: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
   22 |     return stack->top == NULL;
      |                 ^~
sudoku.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b801c0a
